...
                                    </imageView>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="17" translatesAutoresizingMaskIntoConstraints="NO" id="QgY-c7-5Ef">
                                        <rect key="frame" x="20" y="121" width="295" height="117"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email Address" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xAL-jf-7Iy">
                                                <rect key="frame" x="0.0" y="0.0" width="295" height="50"/>
                                                <accessibility key="accessibilityConfiguration" identifier="emailtext"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="50" id="Lod-e3-0Jp"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                <textInputTraits key="textInputTraits" textContentType="email"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="q2Z-Bf-AWo">
                                                <rect key="frame" x="0.0" y="67" width="295" height="50"/>
                                                <accessibility key="accessibilityConfiguration" identifier="pwdtext"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="50" id="zRv-0d-X05"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                            </textField>
                                        </subviews>
                                    </stackView>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FfR-9m-mFx">
                                        <rect key="frame" x="100" y="263" width="135" height="45"/>
                                        <color key="backgroundColor" systemColor="systemBlueColor"/>
                                        <accessibility key="accessibilityConfiguration" identifier="loginbtn"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="45" id="JLb-pJ-vUA"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <state key="normal" title="LOGIN">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
